--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "mongoose": "^4.4.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.69.0"
   }
 }
